<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pastelorange"
    tools:context=".CadastroPage">

    <TextView
        android:id="@+id/Cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastro"
        android:textSize="@dimen/quarenta"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:layout_marginTop="@dimen/cem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/nomeIdoso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nomeIdoso"
        android:textAlignment="center"
        android:backgroundTint="@color/orange"
        android:textColorHint="@color/yellow"
        app:layout_constraintTop_toBottomOf="@id/Cadastro"
        android:layout_marginTop="@dimen/quarenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/idadeIdoso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vinte"
        android:hint="@string/idadeIdoso"
        android:textAlignment="center"
        android:backgroundTint="@color/orange"
        android:textColorHint="@color/yellow"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/nomeIdoso"
        />

    <EditText
        android:id="@+id/endereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vinte"
        android:hint="@string/endereco"
        android:textAlignment="center"
        android:backgroundTint="@color/orange"
        android:textColorHint="@color/yellow"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/idadeIdoso"
        />

    <EditText
        android:id="@+id/nomeResponsavel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vinte"
        android:hint="@string/nomeResponsavel"
        android:textAlignment="center"
        android:backgroundTint="@color/orange"
        android:textColorHint="@color/yellow"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/endereco"
        />

    <EditText
        android:id="@+id/telefoneResponsavel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vinte"
        android:hint="@string/telefoneResponsavel"
        android:textAlignment="center"
        android:backgroundTint="@color/orange"
        android:textColorHint="@color/yellow"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/nomeResponsavel"
        />

    <EditText
        android:id="@+id/emailResponsavel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vinte"
        android:hint="@string/emailResponsavel"
        android:textAlignment="center"
        android:backgroundTint="@color/orange"
        android:textColorHint="@color/yellow"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/telefoneResponsavel"
        />

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/quarenta"
        android:text="@string/cadastrar"
        android:textColor="@color/black"
        android:backgroundTint="@color/yellow"
        app:layout_constraintTop_toBottomOf="@+id/emailResponsavel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>